<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Watan Arts</string>
    <string name="action_search">Search</string>
    <string name="terms">Terms And Conditions </string>
    <string name="default_notification_channel_id">2222 </string>
    <string name="twitter_app_id" translatable="false">EMhj0YfWvXF8ymDwMGSG1pV7Q</string>
    <string name="twitter_app_secret" translatable="false">oisN1BQmavvs2exFOVHXJPNgE90ib7R1e1atN5ilIDDUXqKN99</string>
    <string name="gcm_sender_id" translatable="false">670978781059</string>
    <string name="view_cancel">Cancel</string>
    <string name="view_submit">Submit</string>
    <string name="no_item_1">No.</string>
    <string name="no_item_2">Board(s)</string>
    <string name="verify_city">Please Enter Valid city</string>
    <string name="verify_country">Please Enter Valid Country</string>
    <string name="verify_address">Please Enter Valid Address</string>
    <string name="price_item_1">Price: </string>
    <string name="price_item_2">$</string>
    <string name="login_first">Please Login First To Make Order</string>
    <string name="drawer_opened_desc">Drawer is Opened</string>
    <string name="drawer_closed_desc">Drawer is Closed</string>
    <string name="error_no_internet_connection">Your mobile has a connectivity problem to internet</string>
    <string name="drawer_open_content_desc">open</string>
    <string name="drawer_close_content_desc">close</string>
    <string name="under_develp">This feature is under development</string>
    <string name="title_activity_fb">FbActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_tablet">TabletActivity</string>
    <string name="strEmptyStateMessage">No Data Found</string>
    <string name="photo_chooser_title">Upload picture</string>
    <string name="gallery_chooser_title">Select Picture:</string>
    <string name="photo_chooser_camera">Camera</string>
    <string name="photo_chooser_gallery">Gallery</string>
    <string name="title_activity_search_show_case">Search</string>
    <string name="title_activity_contributors">ContributorsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="change_password">Change Your Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_card_fragment">Cards Pager</string>
    <string name="some_error">Some Error Happened .. Please Try Again Later</string>
    <string name="tap_to_reload">Reload Fetching Data</string>
    <string name="slow_connection">You Seem To Have Very Slow Network Connection .. Try Again Later</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Mobile</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="cash">Cash on delivery</string>
    <string name="online">Online Payment</string>
    <string name="complete">Complete</string>
    <string name="check_code">Check Code</string>
    <string name="payment_Methods">Payment Methods</string>
    <string name="payment">Payment</string>
    <string name="coupon">Coupon</string>
    <string name="signup">SignUp</string>
    <string name="skip">Skip</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="login_with_face">Login with Facebook</string>
    <string name="OR">OR</string>
    <string name="dolar">&#36;</string>
    <string name="le">L.E</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass"> New Password</string>
    <string name="signorLogin">Sign Up or Log In</string>
    <string name="log_out">Log Out</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Your Password ?</string>
    <string name="faq">FAQ</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="meshcavas_title">MeshCanvas - canvas print</string>
    <string name="meshcavas_desc">MeshCanvas - canvas print \n MeshCanvas - canvas print MeshCanvas \n- canvas print\nMeshCanvas - canvas print</string>
    <string name="saturation">Saturation</string>
    <string name="hue">Hue</string>
    <string name="title_home">Home</string>
    <string name="title_meshCanvas">Watan Art</string>
    <string name="title_history">My Orders</string>
    <string name="title_cart">My Cart</string>
    <string name="title_setting">Settings</string>
    <string name="title_account">Account</string>
    <string name="title_canvas_print">Board Print</string>
    <string name="title_shipping_order">Shipping Order</string>
    <string name="full_name_edit">Full Name</string>
    <string name="email_edit">E-mail</string>
    <string name="password_edit">*******</string>
    <string name="change">Change</string>
    <string name="phone_edit">Phone</string>
    <string name="save">Save</string>
    <string name="invalid_password">incorrect passowrd</string>
    <string name="invalid_old_password">enter old passowrd</string>
    <string name="invalid_new_password">enter new passowrd</string>
    <string name="invalid_confirm_pass_hint">enter confirm password</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="website">Website</string>
    <string name="title_about">About Us</string>
    <string name="title_contact_us">Contact  </string>
    <string name="contact_us">Contact Us</string>
    <string name="info">Info</string>
    <string name="contact">Send us message</string>
    <string name="str_empty_state_message">No Data Found</string>
    <string name="api_return_null">No data found</string>
    <string name="text_code_empty">Enter Coupon Code first</string>
    <string name="email_hint">Please enter your email</string>
    <string name="phone_hint">Please enter your phone number</string>
    <string name="password_hint">Please enter your password</string>
    <string name="password_pattern">Password Length must be at least 6 letters and numbers</string>
    <string name="password_pattern2">Password Length must be at least 6 characters</string>
    <string name="invalid_email">invalid email </string>
    <string name="invalid_phone">Phone number must have 11 number at least</string>
    <string name="enter_password">please enter passowrd</string>
    <string name="enter_full_name">please enter your name</string>
    <string name="enter_requied_field">type here</string>
    <string name="invalid_confirm_password">Password and confirm password did not match !</string>
    <string name="name_hint">please type your name  </string>
    <string name="messeage_hint">please type your messeage </string>
    <string name="send_messege_fail">Failed to send message</string>
    <string name="send_messege_succsess">Message sent successfully</string>
    <string name="fail_login">Email or Password is Incorrect</string>
    <string name="login_success">Login successfully </string>
    <string name="add">Add images</string>
    <string name="item_more_3">Order must have more than 3 items to complete order   </string>
    <string name="email_exist"> Email is already exist..please use new email address </string>
    <string name="update_profile_fail">Failed to update profile</string>
    <string name="update_profile_success">Profile updated successfuly</string>
    <string name="register_fail">Failed to sign up</string>
    <string name="register_success">Sign up successfully  </string>
    <string name="pass_changed_succsess">Password changed successfully </string>
    <string name="fail_changed_succsess">Please insert valid old password</string>
    <string name="no_order"> There are no orders</string>
    <string name="no_faq">There are no questions</string>
    <string name="wait">wait</string>
    <string name="order_approved">Order approved</string>
    <string name="delivered">Delivered</string>
    <string name="no_Of_order">Order.No : </string>
    <string name="no_of_Canvas">No. of Boards :  </string>
    <string name="status">Status : </string>
    <string name="can_not_change_ratio">You can\'t choose this ratio as it leads to low resolution image  </string>
    <string name="can_not_submit">You can\'t submit these setting as it leads to low resolution image  </string>
    <string name="request_done">Your request is done  </string>
    <string name="code_not_valid">Your code is not valid  </string>
    <string name="code_is_valid">Your code is  valid  </string>
    <string name="confirm_replace">Are You really want to replace image ?  </string>
    <string name="replace">Replace Image  </string>
    <string name="confirm_delete">Are You really want to Delete image ?  </string>
    <string name="confirm_shipping">Are You really want to add  Product to Cart ?</string>
    <string name="confirm_delete_product">Are You really want to Delete Product ?  </string>
    <string name="confirm_low">Are You really want to complete order with this images ?  </string>
    <string name="confirm_delete_all">Are You really want to delete all images from this order ?  </string>
    <string name="forget_pass_succsess">Please check your email for new password </string>
    <string name="invalid_email_forget_pass">Please insert your registered email</string>
    <string name="country_city_validation">Please select your country and city</string>
    <string name="date">Date : </string>
    <string name="price">Price : </string>
    <string name="login_before">you must log in before</string>
    <string name="delete">Delete Image  </string>
    <string name="delete_product">Delete Product  </string>
    <string name="delete_all">Delete All </string>
    <string name="ok">Yes</string>
    <string name="cancel">No  </string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="complete_shipping">Complete Shipping</string>
    <string name="choose">Choose</string>
    <string name="share">Share App</string>
    <string name="language">Language</string>
    <string name="edit_Profile">Edit Profile</string>
    <string name="ratio">Ratio :</string>
    <string name="quantity">Quantity :</string>
    <string name="total_price">Total Price :</string>
    <string name="arabic">العربية </string>
    <string name="english">English</string>
    <string name="no_Of_order_">No Of Order : </string>
    <string name="create">Create</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="register_with_face">Register with Facebook</string>
    <string name="title_edit_images">Edit Images</string>
    <string name="delivery_time">Delivery Time :</string>
    <string name="delivery_price">Delivery Price :</string>
    <string name="img_resoluyion">Image resolution is Low, it may be pixeled on printing</string>
    <string name="days">Days</string>
    <string name="or">OR</string>
    <string name="qty">Qty</string>
    <string name="low_reselution">Low Resolution Images detected</string>
        <string name="facebook_app_id" translatable="false">427047514523802</string>
        <string name="fb_login_protocol_scheme" translatable="false">fb427047514523802</string>
    <string name="get_10_egp_free_Credit1">Get your</string>
    <string name="exit_logout">Are You Sure to Exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>