<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_225sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_exit_popup">

    <com.WattanArt.Utils.widgets.CustomeTextViewBold
        android:text="@string/exit_logout"
        android:id="@+id/txt_exit_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textStyle="normal"
        android:gravity="center"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



<RelativeLayout
    android:layout_margin="@dimen/_16sdp"
    android:layout_below="@id/txt_exit_logout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <com.WattanArt.Utils.widgets.CustomeButtonBold
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txt_yes"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_40sdp"
        android:textStyle="normal"
        android:background="@drawable/background_for_yes_no"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />

    <com.WattanArt.Utils.widgets.CustomeButtonBold
        android:layout_centerVertical="true"
        android:textAllCaps="false"
        android:layout_alignParentStart="true"
        android:id="@+id/txt_no"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_40sdp"
        android:textStyle="normal"
        android:background="@drawable/background_for_yes_no"
        android:text="@string/no"
        android:textColor="@color/white"
        />

</RelativeLayout>

</RelativeLayout>