<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shape">

    <com.WattanArt.Utils.widgets.CustomeTextViewBold
        android:visibility="gone"
        android:id="@+id/customeTextViewBold2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delete"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.WattanArt.Utils.widgets.CustomeTextViewBold
        android:id="@+id/customeTextViewBold"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/confirm_shipping"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customeTextViewBold">


        <com.WattanArt.Utils.widgets.CustomeButton
            android:id="@+id/continue_shopping_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:background="@drawable/signup_btn_background"
            android:text="@string/continue_shopping"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="visible"
             />

        <com.WattanArt.Utils.widgets.CustomeButton
            android:id="@+id/complete_shipping_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:background="@drawable/signup_btn_background"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/complete_shipping"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
